# esp32_ulp_sht3x

./: CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  component.mk  ulp_sht3x_sensor.c
main/ulp/: i2c.S  i2c_sht3x.S  main.S  util_macro.S
